# ugl

./: CMakeLists.txt  README.md  package.xml
cmake/: uglConfig.cmake
include/geometry_cpp/lie_group/: utility.h
include/geometry_cpp/math/: matrix.h  quaternion.h  slerp.h  types.h  vector.h
include/geometry_cpp/trajectory/: angular_trajectory.h  bezier.h  linear_trajectory.h  slerp_segment.h  trajectory.h
include/ugl/lie_group/: common.h  euclidean.h  extended_pose.h  mappings.h  pose.h  rotation.h  rotation2d.h  utility.h
include/ugl/math/: matrix.h  quaternion.h  slerp.h  vector.h
include/ugl/random/: normal_distribution.h  seed.h  uniform_distribution.h
include/ugl/trajectory/: angular_trajectory.h  bezier.h  bezier_sequence.h  circle_arc.h  helix.h  linear_trajectory.h  slerp_segment.h  slerp_sequence.h  trajectory.h
src/lie_group/: common.cpp  euclidean.cpp  extended_pose.cpp  jacobian_helper.cpp  jacobian_helper.h  mappings.cpp  pose.cpp  rotation.cpp  rotation2d.cpp  utility.cpp
src/math/: matrix.cpp  quaternion.cpp  slerp.cpp  types.cpp
src/random/: normal_distribution.cpp  random_engine.cpp  random_engine.h  seed.cpp  uniform_distribution.cpp
src/trajectory/: angular_trajectory.cpp  bezier.cpp  bezier_sequence.cpp  circle_arc.cpp  helix.cpp  linear_trajectory.cpp  slerp_sequence.cpp  trajectory.cpp
