<?xml version="1.0"?>
<package format="2">
  <name>ugl</name>
  <version>0.0.1</version>
  <description>The ugl package</description>
  <license>BSD</license>

  <maintainer email="karl.viktor.kull@gmail.com">Viktor Kull</maintainer>
  <author email="karl.viktor.kull@gmail.com">Viktor Kull</author>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>libeigen3-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
